methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:2: error: not found: value brushdown
                    {forward(); forward(); brushdown(); brushup(); left(); forward(); right(); forward(); brushdown(); brushup(); right(); forward(); brushdown(); brushup(); right(); forward(); forward(); left()}
                                           ^PictureMono1:2: error: not found: value brushup
                    {forward(); forward(); brushdown(); brushup(); left(); forward(); right(); forward(); brushdown(); brushup(); right(); forward(); brushdown(); brushup(); right(); forward(); forward(); left()}
                                                        ^PictureMono1:2: error: not found: value brushdown
                    {forward(); forward(); brushdown(); brushup(); left(); forward(); right(); forward(); brushdown(); brushup(); right(); forward(); brushdown(); brushup(); right(); forward(); forward(); left()}
                                                                                                          ^PictureMono1:2: error: not found: value brushup
                    {forward(); forward(); brushdown(); brushup(); left(); forward(); right(); forward(); brushdown(); brushup(); right(); forward(); brushdown(); brushup(); right(); forward(); forward(); left()}
                                                                                                                       ^PictureMono1:2: error: not found: value brushdown
                    {forward(); forward(); brushdown(); brushup(); left(); forward(); right(); forward(); brushdown(); brushup(); right(); forward(); brushdown(); brushup(); right(); forward(); forward(); left()}
                                                                                                                                                      ^PictureMono1:2: error: not found: value brushup
                    {forward(); forward(); brushdown(); brushup(); left(); forward(); right(); forward(); brushdown(); brushup(); right(); forward(); brushdown(); brushup(); right(); forward(); forward(); left()}
                                                                                                                                                                   ^