methods.picture.PictureMono1.scala.code
override def run() {def makeV()
                    {forward(); forward(); brushdown(); brushup(); left(); forward(); right(); forward(); brushdown(); brushup(); right(); forward(); brushdown(); brushup(); right(); forward(); forward(); left()}
for (stepper<-1 to 4) {makeV()}}